implements some endpoints again
