# src/main/resources/openapi.yaml
@@ -159,6 +159,11 @@ paths:
       responses:
         "200":
           description: Обновление произошло успешно
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "Ticket updated successfully"
         "400":
           description: Ошибка во входных данных
           content:
@@ -336,7 +341,7 @@ paths:
                     code: "400"
                     message: "Validation Failed"
 
-  /ticket/start/comment:
+  /tickets/start/comment:
     get:
       tags:
         - Additional task
